--- a/subpage03.html
+++ b/subpage03.html
@@ -18,21 +18,21 @@
             <div class="dropdown">
                 <div id="ham"><img src="./img/icon/ham.png" alt=""></div>
                 <ul class="dropdown-content bold18">
-                    <li><a href="">행사 개요</a></li>
+                    <li><a href="https://cheayeong.github.io/teamproject/subbase_about.html">행사 개요</a></li>
                     <li><a href="./subpage02.html">거점도시 프로그램</a></li>
                     <li><a href="./subpage03.html">기획 프로그램</a></li>
                     <li><a href="./subpage04_1.html">공예주간 파트너</a></li>
-                    <li><a href="">프레스</a></li>
+                    <li><a href="https://cheayeong.github.io/teamproject/subbase_press.html">프레스</a></li>
                 </ul>                
             </div>
         </div>
         <article id="ul_wrap" class="h1024">
             <ul id="menu_wrap">
-                <li><a href="">행사 개요</a></li>
+                <li><a href="https://cheayeong.github.io/teamproject/subbase_about.html">행사 개요</a></li>
                 <li><a href="./subpage02.html">거점도시 프로그램</a></li>
                 <li><a href="./subpage03.html">기획 프로그램</a></li>
                 <li><a href="./subpage04_1.html">공예주간 파트너</a></li>
-                <li><a href="">프레스</a></li>
+                <li><a href="https://cheayeong.github.io/teamproject/subbase_press.html">프레스</a></li>
             </ul>
             <ul id="pop_wrap" class="h1024">
                 <li><a href="">로그인</a></li>
@@ -183,4 +183,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/nav.js"></script>
     <script src="./js/index1.js"></script>
+
 </html>
